@@ -3,7 +3,11 @@
 	* gm2/Make-lang.in:  add path to doc/include for makeinfo
           and texinfo rules.
 	* gm2/gm2.texi:  rewritten title and standard GNU FDL
-          copyright as per GCC documentation.
+        copyright as per GCC documentation.
+	* gm2/gm2-libs-ch/getopt.c:  changed licence to LGPL 3.
+	* gm2/gm2-libs/GetOpt.def:  changed licence to LGPL 3.
+	* gm2/gm2-libs/GetOpt.mod:  changed licence to LGPL 3.
+	* gm2/gm2-libs/getopt.def:  changed licence to LGPL 3.
 
 2019-07-25      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
